2008-03-09 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/gen/lib/data.py (Date.get_sort_value):Add updated description to 
	what a sortval is. Also add reference to Julian Day on Wikipedia.

2008-03-09  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_WebReportDialog.py:
	* src/ReportBase/_ReportDialog.py:
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_DocReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	0001814: Applied patch to move print options below option tabs

2008-03-09  Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/base.py: add docstring to find functions, #1866
	* src/gen/db/dbdir.py: add docstring to find functions, #1866

2008-03-08 Brian Matherly <brian@gramps-project.org>
	* src/docgen/PdfDoc.py: 
	0001917: UI font gets small when creating PDF documents.

2008-03-08 Brian Matherly <brian@gramps-project.org>
	* src/gen/lib/note.py:
	* src/Editors/_EditNote.py:
	* src/DisplayModels/_NoteModel.py:
	0001863: <gramps> tags in notes, consistency. This should be in all 
	notes or only in the ones that have markup
	Markup has been disabled for notes. A new strategy is being worked
	on to allow styles for notes.

2008-03-08  Douglas S. Blank  <dblank@saliva.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletWindow.close): 
	fixed issue with reattaching detached gramplet after a col change

2008-03-08  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletWindow.close): 
	Fixed issue exhibited on Windows with buttons becoming dead

2008-03-07 Peter Landgren <peter.talken@telia.com>
	* src/plgins/NotRelated.py: Issue #1795 author information update
	* src/plgins/rel_sv.py: Fixed issues #1881 and 1910

2008-03-07 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/data/Makefile.am: add new css files and delete old ones.
	* src/images/Makefile.am: add new images for Narrative web report
	0001912: make fails 
